major code refactor (Expression class added)